# koder

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GIT_SETUP.md  LICENSE  PAT_GUIDE.md  README.md  SELF_HOSTING_MODEL.md  code-webapp.yml  cudor.yml  justfile  kod.yml  package.json  run-local-bridge.sh  run-local-koder.sh  run-local-remodex.sh  start.sh
.claude/: settings.local.json
.github/workflows/: deploy.yml
CodexMobile/CodexMobile/: ContentView.swift
CodexMobile/CodexMobile.xcodeproj/: project.pbxproj
CodexMobile/CodexMobileTests/: CodexSkillsListDecodeTests.swift  TurnFileAutocompleteTokenTests.swift  TurnTimelineReducerTests.swift  TurnViewModelQueueTests.swift
Docs/: KODER_PRODUCT_SPEC.md  self-hosting.md
bridge/: package-lock.json  package.json
bridge/scripts/: prepare-private-defaults.js
bridge/src/: bootstrap-codex-cli.js  bridge.js  codex-cli-bootstrap.js  codex-desktop-refresher.js  daemon-state.js  git-handler.js  index.js  ios-app-compatibility.js  macos-launch-agent.js  notifications-handler.js  package-version-status.js  (+10 more)
frontend/: App.jsx  index.css  index.html  package-lock.json  package.json  vite.config.js
phodex-bridge/: package-lock.json  package.json
public/: index.html
relay/: README.md  apns-client.js  apns-client.test.js  package.json  push-service.js  push-service.test.js  relay.js  server.js  server.test.js
server/: app.js  app.py  pyproject.toml
static/: index.html
web/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
(+67 files in other folders)
